# Shop-Chatbot-Assistant

./: app.py  data_ingestion.py  integration.ipynb  pyproject.toml  requirements.txt  sync_pinecone.py
